--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /db/*.sqlite3
 /db/*.sqlite3-*
 
+
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -33,3 +35,15 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+
+.env
+# Ignore application configuration
+/config/application.yml
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
