--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "dependencies": {
-    "@rails/webpacker": "5.4.4",
-    "axios": "^1.3.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "axios": "^1.3.3"
   },
-  "devDependencies": {
-    "webpack-dev-server": "^3"
-  }
+  "devDependencies": {}
 }
