--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
-    "axios": "^1.3.3"
+    "@rails/webpacker": "5.4.4",
+    "axios": "^1.3.3",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack-dev-server": "^3"
+  }
 }
