--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,6 @@
 /db/*.sqlite3
 /db/*.sqlite3-*
 
-
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -27,19 +25,12 @@
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
-/tmp/storage/*
-!/tmp/storage/
-!/tmp/storage/.keep
 
 /public/assets
+.byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-
-
-.env
-# Ignore application configuration
-/config/application.yml
 
 /public/packs
 /public/packs-test
@@ -47,3 +38,6 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+# Ignore application configuration
+/config/application.yml
